# squid-av

./: README.md  install.sh  openinit_sig  sealinit_sig  squid.conf
InTruder_Adapter/: Makefile  README  config.status  configure  libtool
InTruder_Adapter/src/: Answer.h  Answers.h  Antivirus.cc  Antivirus.cc~  ClamAv.cc  ClamAv.h  Debugger.cc  Debugger.h  FileBuffer.cc  Gadgets.cc  Gadgets.h  Makefile  Makefile.am  Makefile.in  Makefile~  Pointers.h  Service.cc  Time.cc  TricklingConfig.cc  TricklingConfig.h  Xaction.cc
InTruder_Adapter/src/.deps/: ecap_clamav_adapter_la-Adapter.Plo  ecap_clamav_adapter_la-Answers.Plo  ecap_clamav_adapter_la-Antivirus.Plo  ecap_clamav_adapter_la-ClamAv.Plo  ecap_clamav_adapter_la-Debugger.Plo  ecap_clamav_adapter_la-FileBuffer.Plo  ecap_clamav_adapter_la-Gadgets.Plo  ecap_clamav_adapter_la-Service.Plo  ecap_clamav_adapter_la-Time.Plo  ecap_clamav_adapter_la-TricklingConfig.Plo  ecap_clamav_adapter_la-Xaction.Plo
RansomwareDetection/src/: decrypt.c  encrypt.c
ecap_clamav_adapter-2.0.0/: CREDITS  Makefile.in  acinclude.m4  aclocal.m4  configure.ac
ecap_clamav_adapter-2.0.0/cfgaux/: xstd_pthread.m4
ecap_clamav_adapter-2.0.0/src/: Adapter.cc  Adapter.h  Answers.cc  Antivirus.cc  Antivirus.h  Async.h  FileBuffer.h  Service.h  Time.h  Timeout.h  Xaction.cc  Xaction.h  autoconf.h  autoconf.h.in
libecap-1.0.0/: CREDITS  LICENSE  Makefile.am  Makefile.in  README  configure  configure.in  libecap.pc.in
libecap-1.0.0/doc/: Makefile.am  Makefile.in  async.txt  registration.txt
libecap-1.0.0/src/: Makefile.am  Makefile.in
libecap-1.0.0/src/libecap/: Makefile.am  Makefile.in
libecap-1.0.0/src/libecap/adapter/: Makefile.am  Makefile.in  service.cc  service.h  xaction.cc  xaction.h
libecap-1.0.0/src/libecap/common/: Makefile.am  Makefile.in  ac-autoconf.h.in  area.cc  area.h  autoconf.h  body.h  body_size.cc  body_size.h  common.am  delay.h  errors.cc  errors.h  forward.h  header.h  libecap.h  log.h  memory.h  message.cc  message.h  name.cc  name.h  named_values.h  names.cc  names.h  options.h  registry.cc  registry.h  version.h
libecap-1.0.0/src/libecap/host/: Makefile.am  Makefile.in  host.h  xaction.h
